# zco-claude-skills

./: CLAUDE.md  MANIFEST.in  Makefile  README.md  README_ZH.md  pyproject.toml  readme.md  setup.py  setup.sh  zco_claude_init.py
ClaudeSettings/: DOT.claudeignore  README.md  settings.json  settings.local.sample.json  settings.sample.json
ClaudeSettings/commands/: generate_changelog.sh  show_env  zco-clean  zco-git-summary  zco-git-tag  zco-hist-smy
ClaudeSettings/hooks/: CHANGELOG.md  README.md  debug_hook.py  git_auto_commit.py  save-conversation-enhanced.py  save-conversation-simple.py  save_chat_cli_style.py  save_chat_plain.py  save_chat_spec.py
ClaudeSettings/rules-templates/cpp/: README.md  cpp-testing.md
ClaudeSettings/rules-templates/go/: A02_go-build.md  A50_go_standars.md  README.md  Z50-go-coding.mdown  coding-standards.md  example.go
ClaudeSettings/rules-templates/nodejs/: testing.md
ClaudeSettings/rules-templates/py-web/: pyproject.toml.template  python-testing.md
ClaudeSettings/rules/cpp/: .clang-format.template  .clang-tidy.template  A02_make-build-version.mdown  A03_cmake-build-version.mdown  CMakeLists.sample.txt  CMakeLists.txt.template  README.md  check-standards.sh  coding-standards.md  cpp-testing.md  example.cpp  example.h  list-comments.sh
ClaudeSettings/rules/go/: .golangci.yml.template  A01_go-testing.md  GoBuildAutoVersion.v250425.md  Z02_go-build-version.mdown  check-standards.sh  example.go  list-comments.sh
ClaudeSettings/rules/nodejs/: coding-standards.md
ClaudeSettings/rules/py-scripts/: example.py
ClaudeSettings/rules/py-web/: check-standards.sh  coding-standards.md  example.py  list-comments.sh
ClaudeSettings/skills/: README.md
ClaudeSettings/skills/zco-docs-update/: SKILL.md
ClaudeSettings/skills/zco-help/: SKILL.md
ClaudeSettings/skills/zco-hist-smy/: SKILL.md  zco-hist-smy.py
ClaudeSettings/skills/zco-plan/: SKILL.md
ClaudeSettings/skills/zco-plan-new/: SKILL.md
ClaudeSettings/zco-scripts/: co-docs-update.sh  git-auto-commit.sh  test_update_plan_metadata.py  update-plan-metadata.py
docs/: README.md
docs/plans/: README.md  plan.001.update_claude.md  plan.002.A260109_2322.md  plan.003.A260113_1445.md  plan.004.A260205_1227.md  plan.template.md  plan.template.minimal.md
docs/refers/: claude-hooks-reference.md
docs/samples/A02_zco-plan.md/: A02_sample-zco-plan.md
