[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zco-claude"
version = "0.0.8"
description = "Claude Code 配置管理工具 - 快速初始化项目的 .claude 配置目录"
readme = "readme.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "NicoNing", email = "vmico@outlook.com"}
]
keywords = ["claude", "claude-code", "cli", "configuration", "settings template", "claude-skills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.scripts]
#zco = "zco_claude_init:main"
zco-claude = "zco_claude_init:main"
zco = "zco_claude_init:main"
#zco-claude-init = "zco_claude_init:main"

[project.urls]
Homepage = "https://github.com/zco-team/zco-claude"
Repository = "https://github.com/zco-team/zco-claude.git"
Issues = "https://github.com/zco-team/zco-claude/issues"

[tool.setuptools]
py-modules = ["zco_claude_init"]

[tool.setuptools.package-data]
"*" = ["ClaudeSettings/**/*", "ClaudeSettings/**/.*"]
